# ai-card-organizer

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  png_meta.rs
src-tauri/src/commands/: get_card_metadata.rs  mod.rs  read_file_base64.rs  replace_image.rs  scan_folder.rs  update_card_metadata.rs
