[package]
name = "ai-card-organizer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
png = "0.17"
rfd = "0.15"
crc32fast = "1"
base64 = "0.22"
rayon = "1.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
